--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,12 @@ django-timezone-field==7.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 djoser==2.3.1
+drf-yasg==1.21.8
 idna==3.10
+inflection==0.5.1
 kombu==5.4.2
 oauthlib==3.2.2
+packaging==24.2
 prompt_toolkit==3.0.50
 psycopg==3.2.4
 pycparser==2.22
@@ -29,6 +32,8 @@ PyJWT==2.10.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python3-openid==3.2.0
+pytz==2025.1
+PyYAML==6.0.2
 redis==5.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -38,6 +43,7 @@ social-auth-core==4.5.4
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
+uritemplate==4.1.1
 urllib3==2.3.0
 vine==5.1.0
 wcwidth==0.2.13
