--- a/requirements.txt
+++ b/requirements.txt
@@ -22,13 +22,16 @@ djoser==2.3.1
 drf-yasg==1.21.8
 idna==3.10
 inflection==0.5.1
+iniconfig==2.0.0
 kombu==5.4.2
 oauthlib==3.2.2
 packaging==24.2
+pluggy==1.5.0
 prompt_toolkit==3.0.50
 psycopg==3.2.4
 pycparser==2.22
 PyJWT==2.10.1
+pytest==8.3.4
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python3-openid==3.2.0
